# lightning

./: README.md
deployment/: .gitignore  .pdm-python  README.md  deploy.yaml  pyproject.toml
deployment/roles/cloudflared/defaults/: main.yaml
deployment/roles/cloudflared/tasks/: config.yaml  deps.yaml  main.yaml  service.yaml
deployment/roles/cloudflared/templates/: config.yaml.j2  lightning_cloudflared.service.j2
deployment/roles/cloudflared/vars/: main.yaml
deployment/roles/health/defaults/: main.yaml
deployment/roles/health/handlers/: main.yaml
deployment/roles/health/tasks/: install.yaml  service.yaml
deployment/roles/health/templates/: lightning_health.service.j2
deployment/roles/health/vars/: main.yaml
deployment/vars/: secrets.sample.yaml
health/: .gitignore  Makefile  go.mod  main.go
