[project]
name = "lightning_deployment"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Roman Glushko", email = "roman.glushko.m@gmail.com"},
]
dependencies = [
    "ansible>=10.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
